--- a/website/ui/src/index.html
+++ b/website/ui/src/index.html
@@ -15,6 +15,7 @@
  limitations under the License.
 -->
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Demo E-Commerce Store</title>
@@ -31,19 +32,36 @@
 
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() {dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
+    gtag('consent', 'default', {
+      'ad_storage': 'denied',
+      'ad_user_data': 'denied',
+      'ad_personalization': 'denied',
+      'analytics_storage': 'denied'
+    });
+  </script>
+  <script>
+    try {
+      var match = document.cookie.match(new RegExp('(^| )consent-cookie=([^;]+)'));
+      if (match) {
+        var savedConsent = JSON.parse(decodeURIComponent(match[2]));
+        gtag('consent', 'update', savedConsent);
+      }
+    } catch (e) {
+    }
   </script>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto&display=swap"
-        rel="stylesheet">
+    rel="stylesheet">
   <!-- Bootstrap -->
-  <link rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
